--- a/Frontend/src/assets/common.css
+++ b/Frontend/src/assets/common.css
@@ -219,10 +219,6 @@
   border-radius: 4px;
 }
 
-.video-call-student {
-
-}
-
 .modal-incoming-call .modal-content {
   min-height: 500px;
   min-width: 500px;
@@ -278,11 +274,6 @@
   right: 0px;
 }
 
-.room-chat-area {
-  /* height: 30px; */
-  /* background-color: pink; */
-}
-
 .room-container {
   /* padding: 20px; */
   /* display: flex; */
@@ -294,10 +285,6 @@
 
 .chat-history {
   height: 200px !important;
-}
-
-.chat-input {
-  /* height: 10vh; */
 }
 
 .room-video-display-none {
@@ -325,11 +312,6 @@
   object-fit: fill;
 }
 
-.participant-video video{
-  /* width: 100%;
-  object-fit: fill; */
-}
-
 .room-video-container {
   width: 100%;
   /* margin-bottom: -5px; */
@@ -349,7 +331,10 @@
 .room-control-container {
   width: 100%;
   height: 100px;
-  border-radius: 8px;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
   position: absolute;
   bottom: 0px;
   display: flex;
@@ -460,10 +445,6 @@
   margin-left: auto;
 }
 
-.participant-video {
-  /* width: 100%; */
-}
-
 .room-member-video {
   width: 300px;
   height: 100vh;
@@ -504,12 +485,80 @@
 }
 
 .draggable-video-item {
-  width: 400px !important;
-  height: 100%;
+  width: 98vw !important;
+  height: 100% !important;
+  position: absolute;
+  top: 0px;
+  left: 0px;
   /* z-index: -1;
   position: absolute;
   top: 100px;
   right: 100px;
   visibility: hidden;
   background: #00000000; */
+}
+
+.room-group-chat {
+  width: 400px;
+  height: calc(100vh - 100px);
+  position: absolute;
+  right: 0px;
+  border-left: #33333333 1px solid;
+  background-color: white;
+  overflow: auto;
+}
+
+.room-whitboard {
+  width: 60%;
+  height: calc(100vh - 100px);
+  position: absolute;
+  right: 0px;
+  border-left: #33333333 1px solid;
+  background-color: white;
+  overflow: auto;
+}
+
+.room-chat-header {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 80px;
+  border-bottom: #33333333 1px solid;
+}
+
+.room-whitboard-header {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 80px;
+  border-bottom: #33333333 1px solid;
+}
+
+.btn-rooom-control2 {
+  margin-top: 2px;
+  margin-left: 10px;
+  margin-right: 10px;
+  height: 60px !important;
+  width: 60px !important;
+  background: transparent !important;
+  border: none;
+}
+
+.btn-rooom-control2:hover {
+  background-color: #00000022 !important;
+  box-shadow: none;
+}
+
+.btn-rooom-control2:active {
+  background-color: #00000022  !important;
+  box-shadow: none;
+}
+
+.btn-rooom-control2:focus {
+  background-color: #00000022  !important;
+  box-shadow: none;
+}
+
+.react-draggable {
+  z-index: 9000;
 }
