--- a/Frontend/src/assets/landingpage.css
+++ b/Frontend/src/assets/landingpage.css
@@ -18,6 +18,13 @@ body {
     margin-left: 30px;
 }
 
+@media (max-width: 415px) {
+    .logo-image {
+        margin-right: 0px;
+        margin-left: 30px;
+    }
+}
+
 .navbar-search {
     border: solid #E3E3E3 !important;
     border-radius: 5px !important;
