--- a/Frontend/src/assets/mentorWallet.css
+++ b/Frontend/src/assets/mentorWallet.css
@@ -245,7 +245,7 @@
     }
   }
   
-  @media (min-width: 768px) {
+  @media (max-width: 650px) {
     .sidebar-main-navbar-class {
         display: none !important;
     }
@@ -716,9 +716,19 @@
     font-weight: 500;
     color: #333333;
     padding: 30px;
-    /* width: 300px; */
     justify-content: center;
     display: inline-flex;
+  }
+  
+  @media (max-width: 715px) {
+    .toolbar-month-class {
+      font-size: 20px;
+      font-weight: 500;
+      color: #333333;
+      padding: 0px;
+      justify-content: center;
+      display: inline-flex;
+    }
   }
   
   .toolbar-class {
