--- a/Frontend/src/assets/common.css
+++ b/Frontend/src/assets/common.css
@@ -438,11 +438,11 @@
 }
 
 .margin-right-auto {
-  margin-right: auto;
+  margin-right: auto !important;
 }
 
 .margin-left-auto {
-  margin-left: auto;
+  margin-left: auto !important;
 }
 
 .room-member-video {
@@ -648,17 +648,65 @@
   height: 100vh;
 }
 
-.test-class {
-  /* background-color: #04B5FA; */
-  border: #04B5FA 2px solid;
+.draggable-room-background{
+  background-color: #757575;
   border-radius: 6px;
 }
 
 .participants-video-container {
   width: 100%;
+  margin-top: 5px;
+  /* margin-bottom: 2px; */
 }
 
 .many2many-participant-video {
   width: 320px;
   height: 180px;
+  border-radius: 6px;
+}
+
+.room-control-container-mini {
+  background-color: #00000064;
+  width: 100%;
+  height: 40px;
+  border-radius: 6px;
+  display: flex;
+  align-items: center;
+}
+
+.btn-rooom-control-mini {
+  margin-left: 10px;
+  margin-right: 10px;
+  height: 34px !important;
+  width: 34px !important;
+  padding: 0px;
+  background: transparent !important;
+  border: none;
+}
+
+.btn-rooom-control-mini:hover {
+  background-color: #646464 !important;
+  box-shadow: none;
+}
+
+.btn-rooom-control-mini:active {
+  background-color: #646464  !important;
+  box-shadow: none;
+}
+
+.btn-rooom-control-mini:focus {
+  background-color: #646464  !important;
+  box-shadow: none;
+}
+
+.btn-room-call-decline-mini {
+  float: right;
+  width: 60px;
+  height: 32px;
+  opacity: 1.0;
+  background-color: #F9364D !important;
+  border-color: #F9364D !important;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
 }
