--- a/Frontend/src/assets/common.css
+++ b/Frontend/src/assets/common.css
@@ -563,6 +563,8 @@
 
 .react-draggable {
   z-index: 9000;
+  box-shadow: 0.125rem 0 0.9rem rgb(4, 181, 250);
+  border-radius: 6px;
 }
 
 .one2one-fullscreen {
@@ -736,4 +738,15 @@
   position: absolute;
   top: 40px;
   right: 40px;
+}
+
+.local-video-name {
+  position: absolute;
+  left: 3px;
+  top: 50px;
+  color: #04B5FA;
+  font-weight: bold;
+  background: #00000099;
+  padding: 0px 6px;
+  border-radius: 3px;
 }
