--- a/Frontend/src/assets/common.css
+++ b/Frontend/src/assets/common.css
@@ -124,8 +124,8 @@
 .video-call-element-min {
   /* padding: 10px; */
   width: 100%;
-  /* display: ; */
-  /* background-color: #04B5FA; */
+  background-color: #00000099;
+  border-radius: 6px;
 }
 
 .btn-one2one-min-close {
