--- a/Frontend/src/assets/landingpage.css
+++ b/Frontend/src/assets/landingpage.css
@@ -846,7 +846,7 @@ body {
 }
 
 .facebook-login-center button {
-    align-items: unset !important;
+    align-items: center !important;
     display: flex !important;
     width: 100%;
 
@@ -854,7 +854,7 @@ body {
     border-color: #4285F4 !important;
     margin-bottom: 40px;
     border-radius: 5px !important;
-    font-size: 16px !important;
+    font-size: 14px !important;
     font-weight: 500 !important;
     padding: 8px !important;
     position: relative;
@@ -863,6 +863,7 @@ body {
 
 .facebook-login-center i {
     font-size: 40px !important;
+    margin-left: 13px !important;
 }
 
 .full-width-class {
