--- a/Frontend/src/assets/common.css
+++ b/Frontend/src/assets/common.css
@@ -655,10 +655,36 @@
   border-radius: 6px;
 }
 
-.participants-video-container {
+/* .participants-video-container {
   width: 100%;
   margin-top: 5px;
-  /* margin-bottom: 2px; */
+} */
+
+.participants-video-container-mini {
+  width: 100%;
+  max-height: calc(100vh - 300px);
+  margin-top: 5px;
+  overflow: auto;
+}
+
+.participants-video-container-mini::-webkit-scrollbar {
+  width: 0px;
+  background: transparent; /* Chrome/Safari/Webkit */
+}
+
+.participants-video-container-full {
+  /* width: 100%; */
+  max-height: 100vh;
+  margin-top: 5px;
+  overflow: auto;
+  position: absolute;
+  top: 30px;
+  right: 30px;
+}
+
+.participants-video-container-full::-webkit-scrollbar {
+  width: 0px;
+  background: transparent; /* Chrome/Safari/Webkit */
 }
 
 .many2many-participant-video {
