--- a/Frontend/src/assets/common.css
+++ b/Frontend/src/assets/common.css
@@ -673,8 +673,7 @@
 }
 
 .participants-video-container-full {
-  /* width: 100%; */
-  max-height: 100vh;
+  max-height: calc(100vh - 200px);
   margin-top: 5px;
   overflow: auto;
   position: absolute;
