--- a/Frontend/src/assets/common.css
+++ b/Frontend/src/assets/common.css
@@ -739,8 +739,14 @@
 }
 
 .room-local-video-container-fullscreen {
-  width: 100%;
-  height: 100vh;
+  /* width: 100%;
+  height: 100vh; */
+  width: 320px;
+  height: 180px;
+  position: absolute;
+  top: 30px;
+  right: 30px;
+
 }
 
 .room-local-video-fullscreen {
@@ -753,10 +759,10 @@
   top: 0px;
   left: 0px; */
   border-radius: 6px;
-    margin-top: 5px;
-    position: absolute;
-    top: 30px;
-    right: 30px;
+  margin-top: 5px;
+  position: absolute;
+    /* top: 30px;
+    right: 30px; */
 }
 
 .participants-video-container-fullscreen {
@@ -769,7 +775,7 @@
 .local-video-name {
   position: absolute;
   left: 3px;
-  top: 50px;
+  top: 10px;
   color: #04B5FA;
   font-weight: bold;
   background: #00000099;
@@ -779,8 +785,8 @@
 
 .local-video-name-fullscreen {
   position: absolute;
-  right: 200px;
-  top: 50px;
+  left: 0px;
+  top: 10px;
   color: #04B5FA;
   font-weight: bold;
   background: #00000099;
