--- a/Frontend/src/assets/common.css
+++ b/Frontend/src/assets/common.css
@@ -1030,14 +1030,21 @@
   background-color: #757575;
   border-radius: 7px;
   width: 100%;
+  height: 500px;
   margin-top: 15px;
   position: relative;
+  display: block;
+}
+
+.dashboard-video-ads-container video {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
 }
 
 .dashboard-video-ads-container video:focus{
   outline: none;
 }
-
 
 .dashboard-video-ads-container-small {
   width: 455px;
@@ -1046,6 +1053,7 @@
   right: 24px;
   position: fixed;
   z-index: 100;
+  display: none;
 }
 
 .dashboard-video-ads-container-small video{
