--- a/Frontend/src/assets/student.css
+++ b/Frontend/src/assets/student.css
@@ -293,7 +293,7 @@ body {
 
 .main-content-container-class {
     background-color: #F9F9F9;
-    min-height: calc(100vh - 9.9rem) !important;
+    /* min-height: calc(100vh - 9.9rem) !important; */
     padding-bottom: 0px !important;
 }
 .card-container {
@@ -1151,7 +1151,7 @@ body {
 }
 
 .main-content>.main-content-container.container-fluid {
-    min-height: calc(100vh - 9.9rem);
+    min-height: auto;
 }
 
 .main-sidebar .nav .nav-item .nav-link {
