--- a/Frontend/src/assets/landingpage.css
+++ b/Frontend/src/assets/landingpage.css
@@ -135,7 +135,7 @@ body {
 }
 
 .brains-share {
-    height: 500px;
+    height: 580px;
     width: 100%;
     background-color: white;
     align-items: center;
@@ -347,7 +347,7 @@ body {
 }
 
 .share-knowledge-desc {
-    padding-top: 10%;
+    padding-top: 5%;
     padding-left: 20%;
     align-items: center;
     opacity: 0;
@@ -532,7 +532,7 @@ body {
 .brains-works-content {
     font-size: 16px;
     color: #333333;
-    width: 200px;
+    width: 80%;
     text-align: center;
 }
 
@@ -1301,4 +1301,9 @@ input.sign-has-err:focus {
 .react-dropdown-select {
     height: 49px;
     margin-top: 5px;
+}
+
+.brains-works-container {
+    display: flex;
+    justify-content: center;
 }
