--- a/Frontend/src/assets/mentor.css
+++ b/Frontend/src/assets/mentor.css
@@ -475,6 +475,10 @@
     margin-right: 20px;
 }
 
+.search-hourly svg{
+    margin-right: 5px;
+}
+
 .search-hourly img{
     padding-right: 10px;
     stroke: #04B5FA;
