--- a/Frontend/src/assets/common.css
+++ b/Frontend/src/assets/common.css
@@ -1096,6 +1096,7 @@ ul#fabric-whiteboard-toolbar-ul li{
   position: fixed;
   z-index: 100;
   display: none;
+  background: #757575;
 }
 
 .dashboard-video-ads-container-small video{
@@ -1111,15 +1112,12 @@ ul#fabric-whiteboard-toolbar-ul li{
 }
 
 .dashboard-video-ads-container-controls {
-  /* width: 100%;
   height: 100px;
-  position: absolute; */
   bottom: 0px;
   background-color: #424242;
-  /* border-top-left-radius: 6px; */
-  /* border-top-right-radius: 6px; */
   display: flex;
   align-items: center;
+  justify-content: center;
   margin-top: -5px;
 }
 
@@ -1136,15 +1134,12 @@ ul#fabric-whiteboard-toolbar-ul li{
 }
 
 .dashboard-video-ads-container-small-controls {
-  /* position: absolute;
-  bottom: 0px; */
   width: 100%;
   height: 40px;
   background-color: #424242;
-  /* border-top-right-radius: 6px; */
-  /* border-top-left-radius: 6px; */
   display: flex;
   align-items: center;
+  justify-content: center;
   margin-top: -5px;
 }
 
@@ -1200,9 +1195,9 @@ ul#fabric-whiteboard-toolbar-ul li{
 }
 
 .dashboard-participant-infor {
-  background: gray;
+  /* background: gray; */
   position: relative;
-  height: 500px;
+  /* height: 500px; */
 }
 
 .dashboard-participant-infor img {
@@ -1214,9 +1209,9 @@ ul#fabric-whiteboard-toolbar-ul li{
 }
 
 .dashboard-participant-infor-small {
-  background: gray;
+  /* background: gray; */
   height: 260px;
-  position: relative;
+  /* position: relative; */
 }
 
 .dashboard-participant-infor-small img {
@@ -1225,4 +1220,54 @@ ul#fabric-whiteboard-toolbar-ul li{
   right: 15px;
   top: 15px;
   border-radius: 7px;
+}
+
+.btn-dashboard-ads-button {
+  margin: 0px 20px;
+  width: 150px;
+  height: 80px;
+  opacity: 1.0;
+  background-color: #04B5FA !important;
+  border-color: #04B5FA !important;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.btn-dashboard-ads-button2 {
+  margin: 0px 20px;
+  width: 150px;
+  height: 80px;
+  opacity: 1.0;
+  background-color: white !important;
+  border-color: #04B5FA !important;
+  color: #04B5FA !important;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.btn-dashboard-ads-button-small {
+  margin: 0px 10px;
+  padding: 0px;
+  width: 120px;
+  height: 32px;
+  opacity: 1.0;
+  background-color: #04B5FA !important;
+  border-color: #04B5FA !important;
+  color: white !important;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.btn-dashboard-ads-button2-small {
+  margin: 0px 10px;
+  padding: 0px;
+  width: 120px;
+  height: 32px;
+  opacity: 1.0;
+  background-color: white !important;
+  border-color: #04B5FA !important;
+  color: #04B5FA !important;
+  font-size: 16px;
+  font-weight: bold;
 }
