--- a/Frontend/src/assets/mentorWallet.css
+++ b/Frontend/src/assets/mentorWallet.css
@@ -574,6 +574,12 @@
     font-size: 16px;
     font-weight: normal;
   }
+
+  .toasts-container {
+    top: 102px !important;
+    right: 24px !important;
+    display:block;
+  }
   
   .margin-double-right-class {
     margin-right: 70px;
