--- a/Frontend/src/assets/common.css
+++ b/Frontend/src/assets/common.css
@@ -1341,3 +1341,13 @@ ul#fabric-whiteboard-toolbar-ul li{
 .popover {
   z-index: 15000 !important;
 }
+
+.link_underline {
+  color: #04b5fa !important;
+  font-size: 13px !important;
+  margin: 0px !important;
+  padding: 0px !important;  
+  background-color: transparent !important;
+  border: none;
+  text-decoration: underline;
+}
