Integrate api on sortby feature

--- a/Frontend/src/assets/mentorWallet.css
+++ b/Frontend/src/assets/mentorWallet.css
@@ -553,7 +553,7 @@
     border-bottom-color: rgba(0,0,0,.12);
   }
   
-  .sub-main-nav-bar-class {
+  /* .sub-main-nav-bar-class {
     box-shadow: none !important;
     height: 50px;
     padding: 0px 24px;
@@ -563,7 +563,7 @@
   
   .sub-main-nav-bar-class nav {
     height: 50px !important;
-  }
+  } */
   
   .sub-main-nav-bar-div-class {
     align-items: center;
