--- a/Frontend/src/assets/student.css
+++ b/Frontend/src/assets/student.css
@@ -549,6 +549,13 @@ body {
     text-align: left;
 }
 
+.small-bank-payment-title {
+  color: #333333;
+  font-size: 24px !important;  
+  text-align: left;
+  padding-top: 7px;
+}
+
 .small-card-payment-expiredate {
     color: #333333;
     font-size: 14px !important;
