--- a/Frontend/src/assets/common.css
+++ b/Frontend/src/assets/common.css
@@ -129,7 +129,7 @@
 
 .video-call-element-min {
   width: 100%;
-  background-color: #00000099;
+  background-color: #4d4d4d;
   border-radius: 6px;
   position: relative;
 }
@@ -137,7 +137,7 @@
 .video-call-element-min-chat-whiteboard {
   width: 100%;
   height: 60vh;
-  background-color: #00000099;
+  background-color: #4d4d4d;
   border-radius: 6px;
   position: relative;
 }
