--- a/Frontend/src/assets/common.css
+++ b/Frontend/src/assets/common.css
@@ -370,6 +370,20 @@
   margin-bottom: 0px;
 }
 
+.one2one-control-container {
+  width: 100%;
+  height: 100px;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+  position: absolute;
+  top: calc(100vh - 100px);
+  display: flex;
+  align-items: center;
+  background: #00000099;
+}
+
 .room-control-container {
   width: 100%;
   height: 100px;
@@ -655,6 +669,12 @@
 .fullscreen-self-video {
   width: 100% !important;
   height: 100vh !important;
+  object-fit: fill;
+}
+
+.fullscreen-self-video-chat-whiteboard {
+  width: 100% !important;
+  height: calc(100vh - 328px) !important;
   object-fit: fill;
 }
 
