--- a/Frontend/src/assets/common.css
+++ b/Frontend/src/assets/common.css
@@ -1366,3 +1366,8 @@ ul#fabric-whiteboard-toolbar-ul li{
 .react-datepicker-component .react-datepicker-input:hover {
   background: none; 
 }
+
+.main-navbar .navbar .navbar-nav .dropdown-menu {
+  max-height: 307px;
+  overflow: auto;
+}
