--- a/Frontend/src/assets/common.css
+++ b/Frontend/src/assets/common.css
@@ -1391,3 +1391,38 @@ ul#fabric-whiteboard-toolbar-ul li{
   max-height: 307px;
   overflow: auto;
 }
+
+.book-date-time-list {
+  width: 100%;
+  height: 300px;
+  overflow-y: auto;
+  padding-left: 40px;
+}
+
+.btn-mentor-detail-time-book {
+  color: #04B5FA !important;
+  background-color: #FFFFFF !important;
+  font-size: 16px !important;
+  font-weight: normal !important;
+  border-color: #04B5FA !important;
+  border-width: 1px !important;
+  border-radius: 6px !important;
+  width: 80%;
+  padding-left: 10px;
+  height: 50px;
+  margin-bottom: 20px;
+}
+
+.booking-components {
+  margin-top: 20px;
+  margin-bottom: 40px;
+  width: 100%;
+  padding: 0px 60px;
+  height: 150px;
+}
+
+.booking-components-comment {
+  width: 70%;
+  height: 100%;
+  resize: none;
+}
