--- a/Frontend/src/assets/common.css
+++ b/Frontend/src/assets/common.css
@@ -1559,3 +1559,12 @@ input[type="file" i] {
   border: initial;
   overflow: hidden !important;
 }
+
+.login-signup {
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.login-signup:hover {
+  text-decoration: underline;
+}
