--- a/Frontend/src/assets/landingpage.css
+++ b/Frontend/src/assets/landingpage.css
@@ -581,7 +581,8 @@ body {
 }
 
 .img-discover-detail-content {
-    width: 80%;
+    /* width: 80%; */
+    height: 15vw;
     padding-bottom: 20px;
 }
 
@@ -589,7 +590,7 @@ body {
     width: 36px;
     height: 36px;
     margin-right: 20px;
-    /* border-radius: 10px; */
+    border-radius: 5px;
 }
 
 .btn-learn-more {
