--- a/Frontend/src/assets/common.css
+++ b/Frontend/src/assets/common.css
@@ -1727,3 +1727,28 @@ input[type="file" i] {
   height: 100%;
   min-height: 1px;
 }
+
+.open-forum-badge {
+  background-color: #04B5FA;
+  color: white;
+  padding: 0px 5px;
+  /* border-radius: 10px; */
+  font-size: 20px;
+  font-weight: bold;
+  position: absolute;
+  bottom: 33px;
+  left: 23px;
+  width: 150px;
+}
+
+.open-forum-badge:after {
+  content: '';
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 15px 20px 15px 0;
+  border-color: transparent #ffffff transparent transparent;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
